--- a/src/CryTraCtor.WebApp/Components/_Imports.razor
+++ b/src/CryTraCtor.WebApp/Components/_Imports.razor
@@ -10,3 +10,4 @@
 @using MudBlazor.Services
 @using CryTraCtor.WebApp
 @using CryTraCtor.WebApp.Components
+@using CryTraCtor.WebApp.Components.Shared
