refactor: misc  semantic tweaks

--- a/src/CryTraCtor.WebApp/Components/Pages/CryptoProducts.razor
+++ b/src/CryTraCtor.WebApp/Components/Pages/CryptoProducts.razor
@@ -33,7 +33,7 @@
     {
         var breadcrumbs = new List<BreadcrumbItem>
         {
-            new BreadcrumbItem("Crypto Products", href: "/crypto-products", disabled: true)
+            new("Crypto Products", href: "/crypto-products", disabled: true)
         };
         BreadcrumbService.SetBreadcrumbs(breadcrumbs);
 
