--- a/src/CryTraCtor.WebApp/Components/Pages/Files.razor
+++ b/src/CryTraCtor.WebApp/Components/Pages/Files.razor
@@ -56,7 +56,7 @@
     {
         var breadcrumbs = new List<BreadcrumbItem>
         {
-            new BreadcrumbItem("Files", href: "/files", disabled: true)
+            new("Files", href: "/files", disabled: true)
         };
         BreadcrumbService.SetBreadcrumbs(breadcrumbs);
 
