--- a/src/CryTraCtor.WebApp/Components/Pages/KnownDomains.razor
+++ b/src/CryTraCtor.WebApp/Components/Pages/KnownDomains.razor
@@ -63,7 +63,7 @@
     {
         var breadcrumbs = new List<BreadcrumbItem>
         {
-            new BreadcrumbItem("Known Domains", href: "/known-domains", disabled: true)
+            new("Known Domains", href: "/known-domains", disabled: true)
         };
         BreadcrumbService.SetBreadcrumbs(breadcrumbs);
 
