--- a/src/CryTraCtor.WebApp/Components/Pages/BitcoinPacketsByParticipant.razor
+++ b/src/CryTraCtor.WebApp/Components/Pages/BitcoinPacketsByParticipant.razor
@@ -41,10 +41,10 @@
     {
         var breadcrumbs = new List<BreadcrumbItem>
         {
-            new BreadcrumbItem("Files", href: "/files"),
-            new BreadcrumbItem("File Analysis", href: $"/files/{FileId}/file-analysis"),
-            new BreadcrumbItem("Traffic Participants", href: $"/files/{FileId}/file-analysis/{FileAnalysisId}/traffic-participants"),
-            new BreadcrumbItem("Bitcoin Packets", href: null, disabled: true)
+            new("Files", href: "/files"),
+            new("File Analysis", href: $"/files/{FileId}/file-analysis"),
+            new("Traffic Participants", href: $"/files/{FileId}/file-analysis/{FileAnalysisId}/traffic-participants"),
+            new("Bitcoin Packets", href: null, disabled: true)
         };
         BreadcrumbService.SetBreadcrumbs(breadcrumbs);
 
