--- a/src/CryTraCtor.WebApp/Components/Pages/Home.razor
+++ b/src/CryTraCtor.WebApp/Components/Pages/Home.razor
@@ -1,6 +1,5 @@
 ﻿@page "/"
 
-@using MudBlazor
 @using CryTraCtor.WebApp.Services
 @inject IBreadcrumbService BreadcrumbService
 
@@ -46,7 +45,7 @@
     {
         var breadcrumbs = new List<BreadcrumbItem>
         {
-            new BreadcrumbItem("Home", href: "/", disabled: true)
+            new("Home", href: "/", disabled: true)
         };
         BreadcrumbService.SetBreadcrumbs(breadcrumbs);
     }
