--- a/src/CryTraCtor.WebApp/Components/_Imports.razor
+++ b/src/CryTraCtor.WebApp/Components/_Imports.razor
@@ -11,3 +11,4 @@
 @using CryTraCtor.WebApp
 @using CryTraCtor.WebApp.Components
 @using CryTraCtor.WebApp.Components.Shared
+@using CryTraCtor.WebApp.Navigation
