--- a/src/CryTraCtor.WebApp/Components/Pages/KnownDomains.razor
+++ b/src/CryTraCtor.WebApp/Components/Pages/KnownDomains.razor
@@ -61,11 +61,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        var breadcrumbs = new List<BreadcrumbItem>
-        {
-            new("Known Domains", href: "/known-domains", disabled: true)
-        };
-        BreadcrumbService.SetBreadcrumbs(breadcrumbs);
+        BreadcrumbService.SetBreadcrumbs(AppRoutes.GetKnownDomainsPageBreadcrumbs());
 
         if (RendererInfo.IsInteractive)
         {
